--- a/account.html
+++ b/account.html
@@ -97,7 +97,7 @@
     </div>
 </div>
 <hr>
-<p class="copyright">Copyright 2023 - MATCHAVERSE hello</p>
+<p class="copyright">Copyright 2023 - MATCHAVERSE</p>
 </section>
     
 
